--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2236,7 +2236,7 @@
   full_name: Taylor Graue
   short_name: T. Graue
   profile_path: /company/about/#taylor-graue
-  image: /img/people/taylor-graue.png
+  image: /img/people/taylor-graue.jpg
   image_description: Photo of Taylor Graue
   position: Interim VP of Defense Services
   bio: >
@@ -2684,7 +2684,7 @@
   full_name: Zedd Shmais
   short_name: Z. Shmais
   profile_path: /company/about/#zedd-shmais
-  image: /img/people/zedd-shmais.png
+  image: /img/people/zedd-shmais.jpg
   image_description: Photo of Zedd Shmais
   position: Staff Software Engineer
   bio: >
@@ -3291,7 +3291,7 @@
   full_name: Kelli Mason
   short_name: K. Mason
   profile_path: /company/about/#kelli-mason
-  image: /img/people/kelli-mason.png
+  image: /img/people/kelli-mason.jpg
   image_description: Photo of Kelli Mason
   position: Head of People Operations
   bio: >
@@ -3391,7 +3391,7 @@
   full_name: Angela The
   short_name: A. The
   profile_path: /company/about/#angela-the
-  image: /img/people/angela-the.png
+  image: /img/people/angela-the.jpg
   image_description: Photo of Angela The
   position: Software Engineer Apprentice 
   bio: >
@@ -3499,7 +3499,7 @@
   full_name: Emily Alter
   short_name: E. Alter
   profile_path: /company/about/#emily-alter
-  image: /img/people/emily-alter.png
+  image: /img/people/emily-alter.jpg
   image_description: Photo of Emily Alter
   position: Senior User Researcher 
   bio: >
@@ -3555,7 +3555,7 @@
   full_name: Mike Judd
   short_name: M. Judd
   profile_path: /company/about/#mike-judd
-  image: /img/people/mike-judd.png
+  image: /img/people/mike-judd.jpg
   image_description: Photo of Mike Judd
   position: Chief Operating Officer, Human Services
   bio: >
@@ -3663,7 +3663,7 @@
   full_name: Evan Bowers
   short_name: E. Bowers
   profile_path: /company/about/#evan-bowers
-  image: /img/people/evan-bowers.png
+  image: /img/people/evan-bowers.jpg
   image_description: Photo of Evan Bowers
   position: Staff Product Designer
   bio: >
@@ -3715,7 +3715,7 @@
   full_name: Miringu Kiarie
   short_name: M. Kiarie
   profile_path: /company/about/#miringu-kiarie
-  image: /img/people/miringu-kiarie.png
+  image: /img/people/miringu-kiarie.jpg
   image_description: Photo of Miringu Kiarie
   position: Senior User Researcher
   bio: >
@@ -3787,7 +3787,7 @@
   full_name: Monica Qiu
   short_name: M. Qiu
   profile_path: /company/about/#monica-qiu
-  image: /img/people/monica-qiu.png
+  image: /img/people/monica-qiu.jpg
   image_description: Photo of Monica Qiu
   position: Staff Product Manager
   bio: >
