--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2684,7 +2684,7 @@
   full_name: Zedd Shmais
   short_name: Z. Shmais
   profile_path: /company/about/#zedd-shmais
-  image: /img/people/zedd-shmais.jpg
+  image: /img/people/zedd-shmais.png
   image_description: Photo of Zedd Shmais
   position: Staff Software Engineer
   bio: >
@@ -3391,7 +3391,7 @@
   full_name: Angela The
   short_name: A. The
   profile_path: /company/about/#angela-the
-  image: /img/people/angela-the.jpg
+  image: /img/people/angela-the.png
   image_description: Photo of Angela The
   position: Software Engineer Apprentice 
   bio: >
@@ -3551,7 +3551,7 @@
   full_name: Mike Judd
   short_name: M. Judd
   profile_path: /company/about/#mike-judd
-  image: /img/people/mike-judd.jpg
+  image: /img/people/mike-judd.png
   image_description: Photo of Mike Judd
   position: Chief Operating Officer, Human Services
   bio: >
@@ -3647,7 +3647,7 @@
   full_name: Evan Bowers
   short_name: E. Bowers
   profile_path: /company/about/#evan-bowers
-  image: /img/people/evan-bowers.jpg
+  image: /img/people/evan-bowers.png
   image_description: Photo of Evan Bowers
   position: Staff Product Designer
   bio: >
@@ -3691,7 +3691,7 @@
   full_name: Miringu Kiarie
   short_name: M. Kiarie
   profile_path: /company/about/#miringu-kiarie
-  image: /img/people/miringu-kiarie.jpg
+  image: /img/people/miringu-kiarie.png
   image_description: Photo of Miringu Kiarie
   position: Senior User Researcher
   bio: >
@@ -3755,7 +3755,7 @@
   full_name: Monica Qiu
   short_name: M. Qiu
   profile_path: /company/about/#monica-qiu
-  image: /img/people/monica-qiu.jpg
+  image: /img/people/monica-qiu.png
   image_description: Photo of Monica Qiu
   position: Staff Product Manager
   bio: >
