--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3721,10 +3721,10 @@
   active: true
   order: 1320
   socials:
-    #- name: LinkedIn
-     # link: https://www.linkedin.com/in/alex-hayward-830533156/
-     # link_description: Alex's LinkedIn Account
-     # fa_icon_name: linkedin
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/alex-hayward-830533156/
+      link_description: Alex's LinkedIn Account
+      fa_icon_name: linkedin
 - name: mary-crawford
   fname: Mary
   lname: Crawford
@@ -3765,10 +3765,10 @@
   active: true
   order: 1340
   socials:
-    #- name: LinkedIn
-     # link: https://www.linkedin.com/in/monicaqiu/
-     # link_description: Monica's LinkedIn Account
-     # fa_icon_name: linkedin
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/monicaqiu/
+      link_description: Monica's LinkedIn Account
+      fa_icon_name: linkedin
 - name: eileen-ruberto
   fname: Eileen
   lname: Ruberto
@@ -3785,10 +3785,10 @@
   active: true
   order: 1350
   socials:
-    #- name: LinkedIn
-     # link: https://www.linkedin.com/in/eileenruberto
-     # link_description: Eileen's LinkedIn Account
-     # fa_icon_name: linkedin
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/eileenruberto
+      link_description: Eileen's LinkedIn Account
+      fa_icon_name: linkedin
 - name: rob-mitchell
   fname: Rob
   lname: Mitchell
