--- a/_data/solutions.yml
+++ b/_data/solutions.yml
@@ -2,7 +2,11 @@
   description: |
     A platform that creates a feedback loop between gear users and acquirers, enabling data-driven decisions about gear problems and priorities.
   url: /work/solutions/gearfit/
-- name: Public Service Design
+- name: Service Design Accelerator
   description: |
     A strategic, holistic approach to delivering optimal user experiences within a complex ecosystem of policies, operations, people, and technology.
+  url: /work/solutions/public-service-design/
+- name: Public Health Digital Services
+  description: |
+    A range of data and digital services to help public health jurisdictions build interoperable and sustainable data systems for public health action.
   url: /work/solutions/public-service-design/
